src/applications/search/styles.scss
@import "~@department-of-veterans-affairs/formation/sass/shared-variables";
@import "~@department-of-veterans-affairs/formation/sass/modules/va-pagination";

.search-app {
  margin-bottom: 3em;

  h2:first-child {
    margin-top: 0;
  }

  [href^="http"],
  [rel="external"] {
    background: none;
  }

  .usa-width-three-fourths.error {
    padding-left: 1.5rem;
  }

  ul {
    list-style-type: none;
    padding: 0;

    &.results-list {
      li.result-item {
        margin-top: 1em;

        h5,
        p {
          font-family: "Helvetica", "Arial", "Bitter", "Georgia", "Cambria", "Times New Roman", "Times", serif;
        }

        .result-url,
        .result-desc {
          font-size: 1.3rem;
        }

        a.result-title {
          text-decoration: none;

          h5 {
            margin-bottom: .1rem;
            font-size: 1.6rem;
            font-weight: normal;
          }
        }

        p {
          margin: 0;

          &.result-url {
            color: $color-green;
            margin-bottom: .1rem;
          }
        }
      }
    }
  }

  .usa-alert {
    margin-bottom: 2rem;

    .usa-alert-body {
      padding-left: 1rem;

      .usa-alert-text {
        margin-top: 1rem;
      }
    }
  }

  hr {
    border-bottom: none;

    &#hr-search-bottom {
      margin-bottom: 1.5rem;
    }
  }

  .results-footer {
    justify-content: space-between;
    align-items: center;

    .va-pagination {
      width: unset;
      border-top: none;

      @include media($large-screen) {
        .va-pagination-inner {
          width: unset;
        }
      }
    }

    .simple-pagination {
      span.current-page {
        padding: 0 1rem;
      }
    }
  }

  a:visited {
    color: $color-link-default;
  }

  .search-box {

    input,
    button {
      margin: 0;
      max-width: none;
    }

    button {
      width: auto;
      display: flex;
      align-items: center;
      padding: 0 1.5rem 0 1rem;
      border-radius: 0 5px 5px 0;
    }
  }
}

